Improve deployment techniques with jar and mvn.